--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background: #fff;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 a{
     text-decoration: none;
 }
@@ -16,9 +21,87 @@ li{
     display: flex;
     width: 100%;
     justify-content: space-between;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
+/* LEFT */
+.left{
+    display: flex;
+    width: 100%;
+}
+
+/* GOOGLE LOGO */
+.showcase-1{
+    width: 92px;
+    height: 30px;
+    padding: 20px 32px;
+    /* aspect-ratio: auto 92 / 30; */
+    
+}
+
+
+/* SEARCH BAR */
+
+.lic{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* border: 2px solid black; */
+    width: 600px;
+    margin: 0px;
+    /* padding: 0px; */
+    padding: 20px 32px;
+
+    /* top: 100px; */
+    /* line-height: 3rem; */
+    
+}
+
+.showcase-2{
+    display: flex;
+    width: auto;
+    /* border: 2px solid black; */
+    padding: 0px 15px;
+    justify-content: center;
+    border: 1px solid #ddd;
+    border-radius: 30px;
+
+}
+
+
+.showcase-2 #search{
+    width: 500px;
+    height: 43px;
+    font-size: 16px;
+    outline: none;
+    /* border-radius: 20px; */
+    border: none;
+    padding:2px 15px; 
+}
+
+.showcase-2:hover{
+    box-shadow: 1px 1px 5px 3px #ddd;
+}
+
+.icon{
+    color: rgba(192, 192, 192, 0.89);
+    font-size: 15px;
+}
+
+#mic{
+    color: rgba(192, 192, 192, 0.89);
+    font-size: 20px;
+}
+
+
+/* RIGHT */
+.right{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
 
 /* HEADER */
 
@@ -26,7 +109,7 @@ li{
     display: flex;
     width: 100%;
     justify-content: space-between;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     
 }
 
@@ -41,8 +124,10 @@ li{
     /* width: 100%; */
 }
 .list-1 li a{
+    color: #5f6368;
     margin: 5px;
     padding: 5px;
+    font-size: 14px;
 }
 
 .list-2{
@@ -51,10 +136,55 @@ li{
 }
 
 .list-2 li a{
+    color: #5f6368;
     margin: 5px;
-    padding: 5px;}
+    padding: 5px;
+    font-size: 14px;
+}
+
 .hp{
     /* margin: 5px; */
     /* padding: 5px; */
     width: 7%;
+    color: #5f6368;
+    font-size: 14px;
+}
+
+
+/* SECTION */
+
+.section{
+    margin-left: 190px;
+    width: 620px;
+}
+.section > *{
+    margin: 20px 0px;
+}
+.website-links{
+    margin-bottom: 30px;
+    line-height: 1.4rem;
+
+}
+
+.time{
+    color: #70757a;
+}
+
+.links{
+    color: #202124;
+}
+
+.gsr{
+    color: #5f6368;
+}
+.link-name{
+    font-size: 20px;
+    color: #1a0dab;
+}
+
+.link-text{
+    color: #4d5156;
+}
+.arrow{
+    font-size: 9px;
 }
