--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ li{
 .showcase-1{
     width: 92px;
     height: 30px;
-    padding: 20px 32px;
+    padding: 30px 32px 20px 32px;
     /* aspect-ratio: auto 92 / 30; */
     
 }
@@ -67,6 +67,8 @@ li{
     justify-content: center;
     border: 1px solid #ddd;
     border-radius: 30px;
+    box-shadow: 2px 2px 5px 0px #ddd;
+
 
 }
 
@@ -79,6 +81,7 @@ li{
     /* border-radius: 20px; */
     border: none;
     padding:2px 15px; 
+    
 }
 
 .showcase-2:hover{
@@ -103,12 +106,29 @@ li{
     justify-content: flex-end;
 }
 
+#user{
+    font-size: 30px;
+    color: #E76B14;
+    margin: 25px 30px 10px 10px;
+
+
+}
+#ga{
+    font-size: 20px;
+    color: #5f6368;
+    margin: 30px 10px 10px 10px;
+}
+
+
+
 /* HEADER */
 
 .header{
     display: flex;
     width: 100%;
     justify-content: space-between;
+    border-bottom: 1px solid rgb(255, 238, 238);
+
     /* border: 2px solid red; */
     
 }
@@ -117,21 +137,30 @@ li{
     display: flex;
     width: 100%;
     justify-content: space-around;
+    padding-top: 5px;
+    padding-bottom: 15px;
 }
 
 .list-1{
     display: flex;
+    margin-left: -430px;
     /* width: 100%; */
 }
 .list-1 li a{
     color: #5f6368;
     margin: 5px;
     padding: 5px;
+    padding-bottom: 15px;
     font-size: 14px;
+}
+#all{
+    border-bottom: 3px solid blue;
+
 }
 
 .list-2{
     display: flex;
+    margin-left: -1100px;
     /* width: 100%; */
 }
 
@@ -148,6 +177,7 @@ li{
     width: 7%;
     color: #5f6368;
     font-size: 14px;
+    margin-right: 25px;
 }
 
 
